# transport_ws

./: .gitignore  README.md
px4_ws/: .gitignore
px4_ws/docs/: 7.2实验记录.md  project_memory.md
px4_ws/src/dds_offboard_control/: CMakeLists.txt  package.xml
px4_ws/src/dds_offboard_control/src/: dds_offboard_control_node.cpp  dds_out_and_back_node.cpp
px4_ws/src/mavros/mavros/: CHANGELOG.rst
px4_ws/src/mocap_to_px4_bridge/src/: mocap_bridge.cpp.bak_20260615_191902  mocap_bridge.cpp.bak_qtest_20260702_211631
px4_ws/src/offboard_cpp/: CMakeLists.txt  README.md  package.xml
px4_ws/src/offboard_cpp/action/: Px4Offboard.action
px4_ws/src/offboard_cpp/include/: 2025_Ti_main.hpp
px4_ws/src/offboard_cpp/src/: offboard_demo.cpp  try.py
px4_ws/src/px4_bringup/: setup.py
px4_ws/src/px4_bringup/launch/: start_all_2025TI.launch.py
px4_ws/src/vision_to_mavros/: README.md
px4_ws/src/vision_to_mavros/src/: vision_to_mavros.cpp
px4nokov_ws/src/mocap_nokov/config/: mocap.yaml
px4nokov_ws/src/offboard_cpp/: CMakeLists.txt
px4nokov_ws/src/offboard_cpp/include/lib/: offboard_control_node.hpp
px4nokov_ws/src/offboard_cpp/src/: 2025_Ti_main.cpp
px4nokov_ws/src/offboard_cpp/src/lib/: offboard_action_node.cpp
px4nokov_ws/src/px4_bringup/: README.md
px4nokov_ws/src/px4_bringup/launch/include/: px4_fly.launch.py
src/dds_offboard_control/: CMakeLists.txt
src/mavros/mavros_extras/: CHANGELOG.rst
src/mocap_to_px4_bridge/: CMakeLists.txt  package.xml
src/mocap_to_px4_bridge/src/: mocap_bridge.cpp  mocap_bridge.cpp.bak_20260701_orientation_fix
src/offboard_cpp/include/: offboard_demo.hpp
src/offboard_cpp/include/lib/: offboard_action_node.hpp
src/offboard_cpp/src/: README.md  trp  trp.cpp
src/offboard_cpp/src/lib/: offboard_control_node.cpp
src/px4_bringup/: package.xml
src/px4_bringup/config/: mavros_params.yaml
src/px4_bringup/launch/: serial_and_image_2025TI.launch.py
src/px4_bringup/launch/include/: px4.launch.py
src/vision_to_mavros/: CMakeLists.txt
src/vision_to_mavros/include/vision_to_mavros/: vision_to_mavros.hpp
src/vision_to_mavros/launch/: t265_tf_to_mavros_launch.py
