cmake_minimum_required(VERSION 3.5)
project(mocap_to_px4_bridge)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(px4_msgs REQUIRED)

add_executable(mocap_bridge src/mocap_bridge.cpp)

ament_target_dependencies(mocap_bridge
  rclcpp
  geometry_msgs
  px4_msgs
)

install(TARGETS
  mocap_bridge
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
